# nginx_log_parser

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  nginx_log_parser.py  nginx_parser.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-sbom.in  requirements-sbom.txt  requirements-security.in  requirements-security.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
docs/: risk-acceptance.md
policy/: conftest.rego  docker.rego
tests/: test_ip.py
